docs: update comprehensive project documentation entirely in English